nova_tests/plan118/neg/t6_neg_external_fn_fail_effect.nv
// Plan 118 Ф.6 NEG — `extern "nova" fn ... Fail -> ...` rejected.
// (D216 §20).
//
// C runtime не propagates Nova exception machinery; Fail effect crossing
// Nova→C FFI boundary = undefined behavior (no DWARF unwinder hookup).
// User должен catch внутри callback / wrapper, return sentinel.
//
// EXPECT_COMPILE_ERROR E_EXTERNAL_FN_FAIL_EFFECT

module neg.t6_neg_external_fn_fail_effect

extern "nova" fn p118_bad_ffi(x i64) Fail -> i64

test "rejects" { assert(1 == 1) }
